Fixed message for display on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -205,7 +205,7 @@ html .light {
 .check-list{
   margin-top: 30px;
   overflow-x: scroll;
-  height: 50vh;
+  height: 57vh;
   width: auto;
 }
 
@@ -251,14 +251,14 @@ h3 {
 }
 
 footer {
-  padding-top: 4%;
+  padding-top: 2%
 }
 
 footer h2 {
   display: flex;
   justify-content: center;
   color: rgb(16, 81, 164);
-  font-size: 3.5vw;
+  font-size: 2.5vw;
 }
 
 /*change numbers in message container*/
